--- a/css/styles.css
+++ b/css/styles.css
@@ -420,6 +420,10 @@ h1, h2, h3, h4, h5, h6 {
   .header {
     padding: 3.5em 0 6em; } }
 
+@media only screen and (max-width: 400px) {
+  .header__logo {
+    width: 130px; } }
+
 .promo {
   width: 100%;
   margin-top: 4rem; }
