--- a/sass/modules/_page-section.scss
+++ b/sass/modules/_page-section.scss
@@ -15,6 +15,12 @@
   font-weight: 300;
 }
 
+.page-section__copy--sml {
+	font-size:1.1rem;
+	font-style: italic;
+
+}
+
 .page-section__copy--center {
   text-align: center;
 }
@@ -28,6 +34,11 @@
 
 .page-section--gray {
   background: $white-dark;
+}
+
+.page-section__list li {
+	list-style-type: disc;
+	margin-left:2em;
 }
 
 .video {
