--- a/sass/modules/_product.scss
+++ b/sass/modules/_product.scss
@@ -19,7 +19,7 @@
 	  }
 }
 .product--additional {
-	padding:1.25em 1em 2.5em 1em;
+	padding:1.75em 1em 2.5em 1em;
 }
 
 
@@ -44,6 +44,10 @@
 .product__copy {
 	font-size:1.15rem;
 	margin-bottom:2.15em;
+}
+.product__copy--sml {
+	font-size:1rem;
+	margin-bottom:0em;
 }
 
 @include break-at-max(975) {
